@@ -1,15 +1,16 @@
 package com.myspringdemo.blog.services;
 
 import com.myspringdemo.blog.configs.PageSizeProp;
+import com.myspringdemo.blog.dto.blog.PostModel;
+import com.myspringdemo.blog.dto.blog.PostModelPage;
 import com.myspringdemo.blog.exception.PostNotFoundException;
-import com.myspringdemo.blog.exception.SaveOrUpdateException;
 import com.myspringdemo.blog.models.Post;
 import com.myspringdemo.blog.models.UserEntity;
-import com.myspringdemo.blog.pojo.PostModel;
-import com.myspringdemo.blog.pojo.PostModelPage;
+import com.myspringdemo.blog.rabbitmq.Sender;
 import com.myspringdemo.blog.repo.PostRepository;
 import com.myspringdemo.blog.repo.UserRepository;
 import lombok.AllArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -18,6 +19,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -28,30 +30,37 @@ public class BlogService {
     private final PostRepository postRepository;
 
     private PageSizeProp pageSizeProp;
+    private ModelMapper modelMapper;
+
+    private final Sender tut1Sender;
+
     @Transactional
     public PostModel addPost(PostModel postModel, String author) {
 
         UserEntity user = userRepository.findByUsername(author).orElseThrow(() -> new UsernameNotFoundException("Author not found"));
-        Post post = PostModel.PostModelToPost(postModel);
+        Post post = modelMapper.map(postModel, Post.class);
         post.setAuthor(user);
-        return PostModel.PostToPostModel(postRepository.save(post));
 
+        return modelMapper.map(postRepository.save(post), PostModel.class);
 
     }
+
     @Transactional
     public List<PostModel> getAllPosts() {
         List<Post> posts = postRepository.findAll();
-        return posts.stream()
-                .map(PostModel::PostToPostModel).toList();
+
+        tut1Sender.send();
+        return posts.stream().map(post -> modelMapper.map(post, PostModel.class)).collect(Collectors.toList());
     }
-    
+
     @Transactional
     public List<PostModelPage> getPostsPageable(int page, int size) {
-        Pageable pageable = PageRequest.of(page-1, size);
+        Pageable pageable = PageRequest.of(page - 1, size);
         Page<Post> posts = postRepository.findAll(pageable);
-             return  posts.stream()
+        return posts.stream()
                 .map(post -> {
-                    PostModelPage postModelPage =  PostModelPage.PostToPostModelPage(post);
+
+                    PostModelPage postModelPage = modelMapper.map(post, PostModelPage.class);
                     postModelPage.setPageCount(posts.getTotalPages());
                     postModelPage.setItemsCount(posts.getTotalElements());
 
@@ -61,46 +70,40 @@ public class BlogService {
     }
 
 
-
     //добавить проверку и ексепшны
     @Transactional
-    public PostModel postDetails(long id) throws SaveOrUpdateException, PostNotFoundException {
+    public PostModel postDetails(long id) {
 
-        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found"));
+        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found by search"));
+
         PostModel postModel;
-        // post.get().setViews(post.get().getViews() + 1);
+
         iterateViews(post);
-        try {
-            postModel = PostModel.PostToPostModel(postRepository.save(post));
-            return postModel;
-        } catch (Exception e) {
-            throw new SaveOrUpdateException("");
-            //throw new PostNotFoundException("Post not found");
-        }
-    }
+        modelMapper.typeMap(Post.class, PostModel.class).addMappings(mapping -> mapping.map(source -> source.getAuthor().getUsername(), PostModel::setAuthor));
+        postModel = modelMapper.map(post, PostModel.class);
 
-    @Transactional
-    public PostModel postEdit(long id) throws PostNotFoundException {
 
-        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found"));
 
-        return PostModel.PostToPostModel(postRepository.save(post));
+
+        return postModel;
 
     }
+
 
     @Transactional
     public PostModel postUpdate(PostModel postModel, long id) {
 
-        Post post = postRepository.findById(id).orElseThrow();
+        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found"));
         post.setTitle(postModel.getTitle());
         post.setAnons(postModel.getAnons());
         post.setFull_text(postModel.getFull_text());
-        return PostModel.PostToPostModel(postRepository.save(post));
+        return modelMapper.map(postRepository.save(post), PostModel.class);
+
     }
 
     @Transactional
     public void postDelete(Long id) throws PostNotFoundException {
-        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found"));//mb we need to check postexists
+        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post not found"));
         postRepository.delete(post);
     }
 
@@ -108,4 +111,6 @@ public class BlogService {
         post.setViews(post.getViews() + 1);
 
     }
+
+
 }
